--- a/application.json
+++ b/application.json
@@ -20,6 +20,10 @@
     {
       "id": "Page1",
       "isDefault": true
+    },
+    {
+      "id": "Public.produto",
+      "isDefault": false
     }
   ],
   "unpublishedApplicationDetail": {
